--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,5 +7,11 @@
       "filetypes": ["go"]
     }
   },
-  "html.filetypes":["html","handlebars","htmldjango","blade"]
+  "html.filetypes": [
+    "html",
+    "handlebars",
+    "htmldjango",
+    "blade"
+  ],
+  "snippets.ultisnips.pythonPrompt": false
 }
